warehouse/query-core/src/main/java/nsa/datawave/query/language/parser/lucene/AccumuloSyntaxParser.java
/* Generated By:JavaCC: Do not edit this line. AccumuloSyntaxParser.java */
package nsa.datawave.query.language.parser.lucene;

/**
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import java.io.StringReader;
import java.util.ArrayList;
import java.util.List;
import java.util.Vector;

import nsa.datawave.webservice.query.exception.BadRequestQueryException;
import nsa.datawave.webservice.query.exception.DatawaveErrorCode;
import org.apache.lucene.queryparser.flexible.messages.Message;
import org.apache.lucene.queryparser.flexible.messages.MessageImpl;
import org.apache.lucene.queryparser.flexible.core.QueryNodeParseException;
import org.apache.lucene.queryparser.flexible.core.messages.QueryParserMessages;
import org.apache.lucene.queryparser.flexible.core.nodes.AndQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.BooleanQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.BoostQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.FieldQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.FuzzyQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.ModifierQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.GroupQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.OrQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.FunctionQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.NotBooleanQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.SlopQueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.QueryNode;
import org.apache.lucene.queryparser.flexible.core.nodes.QuotedFieldQueryNode;
import org.apache.lucene.queryparser.flexible.core.parser.SyntaxParser;
import org.apache.lucene.queryparser.flexible.standard.nodes.TermRangeQueryNode;
import org.apache.lucene.queryparser.flexible.standard.nodes.RegexpQueryNode;
import org.apache.lucene.queryparser.flexible.core.util.UnescapedCharSequence;

@SuppressWarnings("all")
public class AccumuloSyntaxParser implements SyntaxParser, AcumuloSyntaxParserConstants {
    
    private static final int CONJ_NONE = 0;
    private static final int CONJ_AND = 2;
    private static final int CONJ_OR = 2;
    
    // syntax parser constructor
    public AccumuloSyntaxParser() {
        this(new FastCharStream(new StringReader("")));
    }
    
    /**
     * Parses a query string, returning a {@link org.apache.lucene.queryparser.flexible.core.nodes.QueryNode}.
     * 
     * @param query
     *            the query string to be parsed.
     * @throws ParseException
     *             if the parsing fails
     */
    public QueryNode parse(CharSequence query, CharSequence field) throws QueryNodeParseException {
        ReInit(new FastCharStream(new StringReader(query.toString())));
        try {
            // TopLevelQuery is a Query followed by the end-of-input (EOF)
            QueryNode querynode = TopLevelQuery(field);
            return querynode;
        } catch (ParseException tme) {
            QueryNodeParseException e = new QueryNodeParseException(tme);
            e.setQuery(query);
            throw e;
        } catch (Error tme) {
            BadRequestQueryException qe = new BadRequestQueryException(DatawaveErrorCode.INVALID_SYNTAX_PARSE_ERROR, tme);
            Message message = new MessageImpl(QueryParserMessages.INVALID_SYNTAX_CANNOT_PARSE, query, tme.getMessage());
            QueryNodeParseException e = new QueryNodeParseException(tme);
            e.setQuery(query);
            e.setNonLocalizedMessage(message);
            throw e;
        }
    }
    
    // * Query ::= ( Clause )*
    // * Clause ::= ["+", "-"] [<TERM> ":"] ( <TERM> | "(" Query ")" )
    final public int Conjunction() throws ParseException {
        int ret = CONJ_NONE;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case AND:
            case OR:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case AND:
                        jj_consume_token(AND);
                        ret = CONJ_AND;
                        break;
                    case OR:
                        jj_consume_token(OR);
                        ret = CONJ_OR;
                        break;
                    default:
                        jj_la1[0] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                break;
            default:
                jj_la1[1] = jj_gen;
                ;
        }
        {
            if (true)
                return ret;
        }
        throw new Error("Missing return statement in function");
    }
    
    final public ModifierQueryNode.Modifier Modifiers() throws ParseException {
        ModifierQueryNode.Modifier ret = ModifierQueryNode.Modifier.MOD_NONE;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NOT:
                jj_consume_token(NOT);
                ret = ModifierQueryNode.Modifier.MOD_NOT;
                break;
            default:
                jj_la1[2] = jj_gen;
                ;
        }
        {
            if (true)
                return ret;
        }
        throw new Error("Missing return statement in function");
    }
    
    // This makes sure that there is no garbage after the query string
    final public QueryNode TopLevelQuery(CharSequence field) throws ParseException {
        QueryNode q;
        q = ModClause(field);
        jj_consume_token(0);
        {
            if (true)
                return q;
        }
        throw new Error("Missing return statement in function");
    }
    
    // These changes were made to introduce operator precedence:
    // - Clause() now returns a QueryNode.
    // - The modifiers are consumed by Clause() and returned as part of the QueryNode Object
    // - Query does not consume conjunctions (AND, OR) anymore.
    // - This is now done by two new non-terminals: ConjClause and DisjClause
    // The parse tree looks similar to this:
    // Query ::= DisjQuery ( DisjQuery )*
    // DisjQuery ::= ConjQuery ( OR ConjQuery )*
    // ConjQuery ::= Clause ( AND Clause )*
    // Clause ::= [ Modifier ] ...
    final public QueryNode ModClause(CharSequence field) throws ParseException {
        QueryNode first, q;
        Vector clauses = null;
        ModifierQueryNode.Modifier mods = null;
        first = DisjQuery(field);
        while ((mods = Modifiers()) == ModifierQueryNode.Modifier.MOD_NOT) {
            if (clauses == null) {
                clauses = new Vector();
                clauses.addElement(first);
            }
            q = DisjQuery(field);
            QueryNode m = new ModifierQueryNode(q, mods);
            clauses.addElement(m);
        }
        
        if (clauses != null) {
            {
                if (true) {
                    if (true)
                        return new NotBooleanQueryNode(clauses);
                }
            }
        } else {
            {
                if (true) {
                    if (true)
                        return first;
                }
            }
        }
        throw new Error("Missing return statement in function");
    }
    
    final public QueryNode DisjQuery(CharSequence field) throws ParseException {
        QueryNode first, c;
        Vector clauses = null;
        first = ConjQuery(field);
        label_1: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case OR:
                    ;
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    break label_1;
            }
            jj_consume_token(OR);
            c = ConjQuery(field);
            if (clauses == null) {
                clauses = new Vector();
                clauses.addElement(first);
            }
            clauses.addElement(c);
        }
        if (clauses != null) {
            {
                if (true)
                    return new OrQueryNode(clauses);
            }
        } else {
            {
                if (true)
                    return first;
            }
        }
        throw new Error("Missing return statement in function");
    }
    
    final public QueryNode ConjQuery(CharSequence field) throws ParseException {
        QueryNode first, c;
        Vector clauses = null;
        first = Query(field);
        label_2: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case AND:
                    ;
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    break label_2;
            }
            jj_consume_token(AND);
            c = Query(field);
            if (clauses == null) {
                clauses = new Vector();
                clauses.addElement(first);
            }
            clauses.addElement(c);
        }
        if (clauses != null) {
            {
                if (true)
                    return new AndQueryNode(clauses);
            }
        } else {
            {
                if (true)
                    return first;
            }
        }
        throw new Error("Missing return statement in function");
    }
    
    final public QueryNode Query(CharSequence field) throws ParseException {
        Vector clauses = null;
        QueryNode c, first = null;
        first = Clause(field);
        label_3: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NOT:
                case FUNCTION:
                case LPAREN:
                case QUOTED:
                case TERM:
                case REGEXPTERM:
                case RANGEIN_START:
                case RANGEEX_START:
                case NUMBER:
                    ;
                    break;
                default:
                    jj_la1[5] = jj_gen;
                    break label_3;
            }
            c = Clause(field);
            if (c == null) {
                break label_3;
            } else {
                if (clauses == null) {
                    clauses = new Vector();
                    clauses.addElement(first);
                }
            }
            clauses.addElement(c);
        }
        if (clauses != null) {
            {
                if (true)
                    return new AndQueryNode(clauses);
            }
        } else {
            {
                if (true)
                    return first;
            }
        }
        throw new Error("Missing return statement in function");
    }
    
    final public QueryNode Clause(CharSequence field) throws ParseException {
        QueryNode q;
        Token fieldToken = null, boost = null;
        boolean group = false;
        if (jj_2_1(2)) {
            fieldToken = jj_consume_token(TERM);
            jj_consume_token(OP_COLON);
            field = EscapeQuerySyntaxImpl.discardEscapeChar(fieldToken.image);
        } else {
            ;
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NOT: {
                if (true)
                    return null;
            }
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case FUNCTION:
            case QUOTED:
            case TERM:
            case REGEXPTERM:
            case RANGEIN_START:
            case RANGEEX_START:
            case NUMBER:
                q = Term(field);
                break;
            case NOT:
                jj_consume_token(NOT);
                {
                    if (true)
                        return null;
                }
                break;
            case LPAREN:
                jj_consume_token(LPAREN);
                q = ModClause(field);
                jj_consume_token(RPAREN);
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case CARAT:
                        jj_consume_token(CARAT);
                        boost = jj_consume_token(NUMBER);
                        break;
                    default:
                        jj_la1[6] = jj_gen;
                        ;
                }
                group = true;
                break;
            default:
                jj_la1[7] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        if (boost != null) {
            float f = (float) 1.0;
            try {
                f = Float.valueOf(boost.image).floatValue();
                // avoid boosting null queries, such as those caused by stop words
                if (q != null) {
                    q = new BoostQueryNode(q, f);
                }
            } catch (Exception ignored) {
                /*
                 * Should this be handled somehow? (defaults to "no boost", if boost number is invalid)
                 */
            }
        }
        if (group) {
            q = new GroupQueryNode(q);
        }
        {
            if (true)
                return q;
        }
        throw new Error("Missing return statement in function");
    }
    
    final public QueryNode Term(CharSequence field) throws ParseException {
        Token term, boost = null, fuzzySlop = null, goop1, goop2;
        boolean fuzzy = false;
        boolean regexp = false;
        boolean startInc = false;
        boolean endInc = false;
        QueryNode q = null;
        FieldQueryNode qLower, qUpper;
        float defaultMinSimilarity = org.apache.lucene.search.FuzzyQuery.defaultMinSimilarity;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case FUNCTION:
            case TERM:
            case REGEXPTERM:
            case NUMBER:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case FUNCTION:
                        term = jj_consume_token(FUNCTION);
                        q = new FunctionQueryNode(EscapeQuerySyntaxImpl.discardEscapeChar(term.image, new char[] {'(', ')', ',', '"', '\'', '\\'}, false),
                                        term.beginColumn, term.endColumn);
                        break;
                    case TERM:
                        term = jj_consume_token(TERM);
                        q = new FieldQueryNode(field, EscapeQuerySyntaxImpl.discardEscapeChar(term.image), term.beginColumn, term.endColumn);
                        break;
                    case REGEXPTERM:
                        term = jj_consume_token(REGEXPTERM);
                        regexp = true;
                        break;
                    case NUMBER:
                        term = jj_consume_token(NUMBER);
                        break;
                    default:
                        jj_la1[8] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case FUZZY_SLOP:
                        fuzzySlop = jj_consume_token(FUZZY_SLOP);
                        fuzzy = true;
                        break;
                    default:
                        jj_la1[9] = jj_gen;
                        ;
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case CARAT:
                        jj_consume_token(CARAT);
                        boost = jj_consume_token(NUMBER);
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case FUZZY_SLOP:
                                fuzzySlop = jj_consume_token(FUZZY_SLOP);
                                fuzzy = true;
                                break;
                            default:
                                jj_la1[10] = jj_gen;
                                ;
                        }
                        break;
                    default:
                        jj_la1[11] = jj_gen;
                        ;
                }
                if (fuzzy) {
                    float fms = defaultMinSimilarity;
                    try {
                        fms = Float.valueOf(fuzzySlop.image.substring(1)).floatValue();
                    } catch (Exception ignored) {}
                    if (fms < 0.0f) {
                        {
                            if (true)
                                throw new ParseException(new MessageImpl(QueryParserMessages.INVALID_SYNTAX_FUZZY_LIMITS));
                        }
                    } else if (fms >= 1.0f && fms != (int) fms) {
                        {
                            if (true)
                                throw new ParseException(new MessageImpl(QueryParserMessages.INVALID_SYNTAX_FUZZY_EDITS));
                        }
                    }
                    q = new FuzzyQueryNode(field, EscapeQuerySyntaxImpl.discardEscapeChar(term.image), fms, term.beginColumn, term.endColumn);
                } else if (regexp) {
                    String s = term.image.substring(1, term.image.length() - 1);
                    UnescapedCharSequence ucs = EscapeQuerySyntaxImpl.discardEscapeChar(s, new char[] {'/'}, false);
                    q = new RegexpQueryNode(field, ucs, 0, ucs.length());
                }
                break;
            case RANGEIN_START:
            case RANGEEX_START:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case RANGEIN_START:
                        jj_consume_token(RANGEIN_START);
                        startInc = true;
                        break;
                    case RANGEEX_START:
                        jj_consume_token(RANGEEX_START);
                        break;
                    default:
                        jj_la1[12] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case RANGE_GOOP:
                        goop1 = jj_consume_token(RANGE_GOOP);
                        break;
                    case RANGE_QUOTED:
                        goop1 = jj_consume_token(RANGE_QUOTED);
                        break;
                    default:
                        jj_la1[13] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case RANGE_TO:
                        jj_consume_token(RANGE_TO);
                        break;
                    default:
                        jj_la1[14] = jj_gen;
                        ;
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case RANGE_GOOP:
                        goop2 = jj_consume_token(RANGE_GOOP);
                        break;
                    case RANGE_QUOTED:
                        goop2 = jj_consume_token(RANGE_QUOTED);
                        break;
                    default:
                        jj_la1[15] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case RANGEIN_END:
                        jj_consume_token(RANGEIN_END);
                        endInc = true;
                        break;
                    case RANGEEX_END:
                        jj_consume_token(RANGEEX_END);
                        break;
                    default:
                        jj_la1[16] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case CARAT:
                        jj_consume_token(CARAT);
                        boost = jj_consume_token(NUMBER);
                        break;
